[package]
name = "multicp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
jwalk = "0.6.0"
filetime = "0.2.18"
clap = { version = "4.0.26", features = ["derive"] }
num_cpus = "1.0"

